Forge Beta: ##-##-2013 ver 1.5.9


13### cards in total.


-------------
Release Notes
-------------

- Constructed mode -
Recently a change was made to the constructed mode and this change now allows you to have up to 8 players rather than just two. The game formats that are located in the variants mode also allow up to eight players. The current user interface for this feature is fairly basic and is not very attractive. The settings tab allows you to set the number of opponents. The player tabs includes the same options that you used to see in the constructed mode.

Marc recently sketched out a couple of attractive mockups that look far more attractive than what we are now using. We just need someone with java skills and swing experience to modify the existing code.

http://www.slightlymagic.net/forum/viewtopic.php?f=52&t=12609#p138913


- Commander 2013 cards -
Forge now includes many of the new Commander 2013 cards. It may take a few days/weeks before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks/months to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient. The Forge devs are not involved in maintaining the servers that house these pictures.


---------
New Cards
---------

Debt of Loyalty
Matopi Golem
Skeleton Scavengers
Soldevi Sentry
Nullstone Gargoyle
Bludgeon Brawl


--------------------
New BNG branch Cards
--------------------

Kiora, the Crashing Wave


------------
Known Issues
------------

There is a known issue with the timing of Leaves the Battlefield triggers and multiple permanents Leaving the Battlefield. As an example, when Blood Artist died at the same time as a lot of other creatures due to a Wrath of God, the Blood Artist should trigger for every creature but does not do so.
